Dockerfile implementation and more fixes for production